[package]
name = "pinyaend"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.10.0", features = ["web-salvo"] }
salvo = { version = "0.37.9", features = ["cors"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
shuttle-shared-db = { version = "0.10.0", features = ["postgres"] }
