[package]
name = "pinyaend"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.10.0", features = ["web-actix-web"] }
actix-web = "4.3.0"
actix-cors = "0.6.4"
shuttle-shared-db = { version = "0.10.0", features = ["postgres"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
